[package]
name = "alkyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[dependencies]
cortex-m = {version = "0.7.3", features=["inline-asm"]}
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

rp2040-hal = { git="https://github.com/rp-rs/rp-hal", features=["rt"] }
rp2040-boot2 = { version = "0.2" }

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
critical-section = { version = "0.2.4", features = ["custom-impl"] }

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.11"
features = ["const_mut_refs"]
